2005-11-09 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added lib/pic to the package

2005-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (valUnaryPM): fixed bug 1350699

2005-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1348008.c: added
	* src/mcs51/gen.c (saveRBank, unsaveRBank): fixed bug 1348008
	* support/regression/tests/bug1337835.c: updated comment

2005-11-06 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/error.cc, sim/ucsim/errorcl.h,
	  sim/ucsim/sim.src/stack.cc, sim/ucsim/sim.src/stackcl.h,
	  sim/ucsim/sim.src/uc.cc, sim/ucsim/sim.src/uccl.h,
	  sim/ucsim/sim.src/mem.cc, sim/ucsim/sim.src/memcl.h,
	  sim/ucsim/cmd.src/set.cc, sim/ucsim/cmd.src/show.cc:
	  dynamic construction of cl_error_class and derivates - 2.nd try

2005-11-05 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/sim.src/error.cc: fixed uninitialized class member variable
	  bug, which caused Bus Errors on sparc solaris

2005-11-04 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/error.cc, sim/ucsim/errorcl.h,
	  sim/ucsim/sim.src/stack.cc, sim/ucsim/sim.src/stackcl.h,
	  sim/ucsim/sim.src/uc.cc, sim/ucsim/sim.src/uccl.h,
	  sim/ucsim/sim.src/mem.cc, sim/ucsim/sim.src/memcl.h,
	  sim/ucsim/cmd.src/cmdconf.cc: dynamic construction of cl_error_class
	  and derivates to resolve the initialization problem on OSX

2005-11-02 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/newcmd.cc:
	  corrected typo - #include <winsock2.h>

2005-11-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/asm.c (printILine): always close tmpFile, thanks Beau E. Cox,
	  (_asxxxx_mapping): added org directive for future enhancements

2005-11-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/app.cc, sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/newcmd.cc:
	  enabled sockets on WIN32
	* sim/ucsim/cmd.src/newcmd.cc: fixed bug with uninitialized variables
